Fix: CSS scrollbars always visible

--- a/deps/css/main.css
+++ b/deps/css/main.css
@@ -405,7 +405,7 @@ select {
         grid-area: adjuntos;
         width: 100%;
         height: 100px;
-        overflow: scroll;
+        overflow: auto;
         justify-content: flex-start;
 
         & .add_file {
